# ruler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-update-prs.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  pages.yml
apps/demo-api/: pyproject.toml
apps/demo-api/src/demo_api/: __init__.py  main.py
apps/demo-web/: index.html  package.json  tailwind.config.js  tsconfig.json
apps/demo-web/src/: App.tsx  index.css
apps/demo-web/src/lib/: client.ts  starterGraph.ts
apps/demo-web/src/views/: EditorView.tsx  LogsView.tsx  TestsView.tsx  VersionsView.tsx
apps/marketing/: README.md  index.html  package.json  style.css  tailwind.config.js  tsconfig.json  vite.config.ts
apps/marketing/src/: App.tsx  Playground.tsx  ThemeToggle.tsx  index.css
apps/marketing/src/lib/: starterGraph.ts  theme.ts  zen.ts
