[project]
name = "demo-api"
version = "0.0.0"
description = "Ruler reference FastAPI service. Not published."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "ruler-python-sdk",
]

[tool.uv.sources]
ruler-python-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_api"]
